<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.adminibm.mcabuddy.MCABuddy_ChangeRole"
        android:scrollbars="vertical">

        <!-- Spinner Element -->
        <Spinner
            android:id="@+id/role_spinner"
            android:ems="13"
            android:layout_marginTop="60dp"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:prompt="@string/spinner_title"
            android:textColor="#ff00b0f0"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="#ff8b8b8b" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:id="@+id/email_editText"
            android:layout_marginTop="40dp"
            android:hint="@string/email_hint"
            android:layout_below="@+id/role_spinner"
            android:layout_alignStart="@+id/role_spinner"
            android:textColor="#ff00b0f0"
            android:textStyle="bold"
            android:inputType="textEmailAddress" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="13"
            android:text="@string/submit"
            android:id="@+id/submit_button"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/email_editText"
            android:layout_alignEnd="@+id/email_editText"
            android:textColor="#fffefefe"
            android:textStyle="bold"
            android:background="#ff00b0f0" />

    </RelativeLayout>
</ScrollView>
