<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:gravity="center_horizontal"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.adminibm.mcabuddy.MCABuddy_Login">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email_editText"
        android:layout_marginTop="101dp"
        android:layout_alignParentTop="true"
        android:hint="@string/user_hint"
        android:layout_alignParentEnd="true"
        android:textColor="#ff00b0f0"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password_editText"
        android:layout_marginTop="30dp"
        android:hint="@string/password_hint"
        android:layout_below="@+id/email_editText"
        android:layout_alignStart="@+id/email_editText"
        android:textColor="#ff00b0f0"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/login_button"
        android:id="@+id/userRegistration_textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="37dp"
        android:clickable="true"
        android:textStyle="bold"
        android:textColor="#ff00b0f0" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:id="@+id/login_button"
        android:onClick="onClick"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/password_editText"
        android:background="#ff00b0f0" />

</RelativeLayout>